2009-08-xx:
    * version 0.7.4
    * Drop Firefox 2 compatibility
    * Custom date formats
    * New CSS: SpotFAQs
    * Improve the GameFAQs clock and add it to the options window
    * New CSS: 8for11
    * Different icons for the sidebar and options toolbar buttons
    * Replace the favorites drop down menu in the sidebar with a list box

2009-07-02:
    * version 0.7.3
    * Fix topic QuickPost when GameFAQs' main stylesheets are disabled
    * Fix QuickPost buttons not appearing under some circumstances
    * Change how descriptions in the Style pane of the options window are presented
      (now shown in a dialog box when enabling or from right click -> About)
    * Fix a problem with the context menu and sidebar in Firefox 2

2009-06-21:
    * version 0.7.2
    * Add clock to top of page - can be enabled by setting
      the "gamefox.elements.clock" pref to true
    * Undisable "Post Message" button after successfully making a post
    * Enable middle-clicking for tracked topics list in the context menu
    * Fix a security issue
    * Compatibility with Firefox 3.5
    * Fix a few third-party cookie issues for Firefox 3.5
    * New CSS: Remove signatures

2009-05-17:
    * version 0.7.1
    * Fix removal of old stylesheets on update
    * Fix horizontal scroll bar that was appearing for some people
    * Fix QuickWhois for your own profile
    * Fix "Hide signatures" CSS with above message data
    * Fix signature importing and exporting in the options window
    * Fix message header links in archived topics
    * Fix new post label on the active messages list not disappearing
    * New CSS: FAQ frames

2009-04-28:
    * version 0.7
    * v11 compatibility

2009-04-24:
    * version 0.6.11.2
    * Fix some broken prefs in Firefox 2
    * Fix non-ASCII characters in some prefs

2009-04-23:
    * version 0.6.11.1
    * Back-up prefs before updating them to the new format
    * Fix date in quote headers when using left of message data