@@ -49,9 +49,8 @@
         display: none !important;
     }
 
-    /* <em><p> - fixed-font block for code
-     * <em><i> - inline code */
-    .message em > p, .message em > i {
+    /* <em><p> - fixed-font block for code */
+    .message em > p {
         font-family: monospace !important;
         font-style: normal !important;
         white-space: pre-wrap;
