@@ -37,3 +37,4 @@ Questions, suggestions or complaints? Let us know at
 * New CSS: 8for11
 * Different icons for the sidebar and options toolbar buttons
 * Replace the favorites drop down menu in the sidebar with a list box
+* Remove inline code tags (block level code is still there)
